--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "preinstall": "npm install -g @angular/cli@7.3.9 @angular/compiler-cli@7.2.0 typescript",
     "postinstall": "ng build --aot --prod"
   },
   "engines": {
