--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "preinstall": "npm install -g @angular/cli@7.3.9 @angular/compiler-cli@7.2.0 typescript",
     "postinstall": "ng build --aot --prod"
   },
   "engines": {
@@ -17,6 +16,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~7.3.6",
+    "@angular/compiler-cli": "~7.2.0",
     "@angular/animations": "~7.2.0",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
@@ -37,8 +38,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.6",
-    "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
