--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~7.3.6",
-    "@angular/compiler-cli": "~7.2.0",
     "@angular/animations": "~7.2.0",
     "@angular/cdk": "^7.3.7",
+    "@angular/cli": "~7.3.6",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
+    "@angular/compiler-cli": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/flex-layout": "^7.0.0-beta.24",
     "@angular/forms": "~7.2.0",
@@ -31,7 +31,9 @@
     "@angular/router": "~7.2.0",
     "angular-in-memory-web-api": "^0.8.0",
     "core-js": "^2.6.9",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "path": "^0.12.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
