--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "/home/sylar/Softwares/Anaconda3/bin/python"
+  "python.pythonPath": "C:\\Users\\Shangyan\\Anaconda3\\python.exe"
 }
